--- a/data_Seggragation.html
+++ b/data_Seggragation.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav class="nav-panel">
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <!-- <li><a href="#operations">Operations</a></li>
+            <li><a href="#reports">Reports</a></li>
+            <li><a href="#settings">Settings</a></li>
+            <li><a href="#help">Help</a></li> -->
+        </ul>
+    </nav>
+
     <div class="container">
         <h1>Excel File Processor</h1>
         
@@ -42,5 +52,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="script.js"></script>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2025 Back End Operations Dashboard. All rights reserved.</p>
+    </footer>
 </body>
 </html>
