--- a/seat_allocation.html
+++ b/seat_allocation.html
@@ -17,6 +17,16 @@
 </head>
 
 <body>
+    <nav class="nav-panel">
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <!-- <li><a href="#operations">Operations</a></li>
+            <li><a href="#reports">Reports</a></li>
+            <li><a href="#settings">Settings</a></li>
+            <li><a href="#help">Help</a></li> -->
+        </ul>
+    </nav>
+
 
     <div class="container">
 
@@ -111,6 +121,10 @@
     </div>
 
     <script src="seat_script.js"></script>
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2025 Back End Operations Dashboard. All rights reserved.</p>
+    </footer>
 
 </body>
 
