--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             </a>
 
            <!-- Exam Seat Allocation Tile -->
-<a href="seat_allocation.html" class="operation-tile">
+<!-- <a href="seat_allocation.html" class="operation-tile">
     <div class="operation-icon">📋</div>
     <h3>Exam Seat Allocation</h3>
     <p>Perform Seat Allocation Batchwise and Day Wise</p>
-</a>
+</a> -->
 
             <!-- File Converter Tile -->
             <!-- <div class="operation-tile">
