Seat Allocation- Edit

--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
             <!-- Excel Processor Tile -->
             <a href="data_Seggragation.html" class="operation-tile">
                 <div class="operation-icon">📊</div>
+                
                 <h3>Data Segragation</h3>
                 <p>Split Excel files based on filename column and process data efficiently</p>
             </a>
 
            <!-- Exam Seat Allocation Tile -->
-<!-- <a href="seat_allocation.html" class="operation-tile">
+<a href="seat_allocation.html" class="operation-tile">
     <div class="operation-icon">📋</div>
     <h3>Exam Seat Allocation</h3>
     <p>Perform Seat Allocation Batchwise and Day Wise</p>
-</a> -->
+</a>
 
             <!-- File Converter Tile -->
             <!-- <div class="operation-tile">
