Seat Allocation- Edit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="data_Seggragation.html" class="operation-tile">
                 <div class="operation-icon">📊</div>
                 
-                <h3>Data Segragation</h3>
+                <h3>Data Segregation</h3>
                 <p>Split Excel files based on filename column and process data efficiently</p>
             </a>
 
