--- a/seat_allocation.html
+++ b/seat_allocation.html
@@ -65,6 +65,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script src="test.js"></script>
+    <script src="seat_script.js"></script>
 </body>
 </html>
