--- a/data_Seggragation.html
+++ b/data_Seggragation.html
@@ -51,7 +51,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="script.js"></script>
+    <script src="data_script.js"></script>
 
     <!-- Footer -->
     <footer class="footer">
