Seat Allocation- Edit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
 
            <!-- Exam Seat Allocation Tile -->
-<a href="seat_allocation.html" class="operation-tile">
+<a href="seatallocation_updated.html" class="operation-tile">
     <div class="operation-icon">📋</div>
     <h3>Exam Seat Allocation</h3>
     <p>Perform Seat Allocation Batchwise and Day Wise</p>
