Seat Allocation- Edit

--- a/seatallocation_updated.html
+++ b/seatallocation_updated.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="seatstyles.css">
 </head>
 <body>
+    <nav class="nav-panel">
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <!-- <li><a href="#operations">Operations</a></li>
+            <li><a href="#reports">Reports</a></li>
+            <li><a href="#settings">Settings</a></li>
+            <li><a href="#help">Help</a></li> -->
+        </ul>
+    </nav>
     <header>
         <h1>Automated Exam Seat Allocation System</h1>
         <p>Upload candidate and lab configuration data to automatically allocate labs and seats</p>
@@ -47,4 +56,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="seat_script_updated.js"></script>
 </body>
+ <!-- Footer -->
+ <footer class="footer">
+    <p>&copy; 2025 Back End Operations Dashboard. All rights reserved.</p>
+</footer>
 </html>
